<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/theme_party"
    tools:context=".FourthParty">

    <LinearLayout
        android:id="@+id/linearLayout7"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="29dp"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/textView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textSkor4"
            android:textSize="24sp"
            android:textColor="@color/score_color"
            android:layout_marginStart="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="50dp"
            android:text="@string/score" />

        <TextView
            android:id="@+id/textHigh4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/high" />

        <TextView
            android:id="@+id/textKalan4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="5dp"
            android:text="@string/time" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="62dp"
        android:text="@string/elephant"
        android:textColor="#000000"
        android:textSize="44sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout7" />


    <LinearLayout
        android:id="@+id/linearLayout8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/imageView9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4">

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="122dp"
            android:layout_height="130dp"
            android:layout_margin="10dp"
            android:onClick="playcamelforelephant"
            app:srcCompat="@drawable/camel"
            tools:layout_editor_absoluteX="73dp"
            tools:layout_editor_absoluteY="187dp" />

        <ImageView
            android:id="@+id/imageView8"
            android:layout_width="122dp"
            android:layout_height="130dp"
            android:layout_margin="10dp"
            android:onClick="playfishforelephant"
            app:srcCompat="@drawable/fish"
            tools:layout_editor_absoluteX="194dp"
            tools:layout_editor_absoluteY="186dp" />
    </LinearLayout>

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="122dp"
        android:layout_height="130dp"
        android:layout_marginBottom="155dp"
        android:onClick="playelephant1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout8"
        app:srcCompat="@drawable/elephant" />

    <ImageView
        android:id="@+id/imageListen4"
        android:layout_width="54dp"
        android:layout_height="48dp"
        android:background="@color/listen_button_color"
        android:onClick="listenAgain4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView9"
        app:layout_constraintVertical_bias="0.283"
        app:srcCompat="@android:drawable/ic_lock_silent_mode_off" />

    <TextView
        android:id="@+id/textListen4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/listen"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageListen4" />


</androidx.constraintlayout.widget.ConstraintLayout>