<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/theme_party"
    tools:context=".SixthParty">

    <LinearLayout
        android:id="@+id/linearLayout10"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="29dp"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/textView6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textSkor6"
            android:textSize="24sp"
            android:textColor="@color/score_color"
            android:layout_marginStart="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="50dp"
            android:text="@string/score" />

        <TextView
            android:id="@+id/textHigh6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/high" />

        <TextView
            android:id="@+id/textKalan6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="5dp"
            android:text="@string/time" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="62dp"
        android:text="@string/elephant"
        android:textColor="#000000"
        android:textSize="44sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout11"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout10" />


    <LinearLayout
        android:id="@+id/linearLayout11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/imageView15"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6">

        <ImageView
            android:id="@+id/imageView13"
            android:layout_width="122dp"
            android:layout_height="130dp"
            android:layout_margin="10dp"
            android:onClick="playelephant3"
            app:srcCompat="@drawable/elephant"
            tools:layout_editor_absoluteX="73dp"
            tools:layout_editor_absoluteY="187dp" />

        <ImageView
            android:id="@+id/imageView14"
            android:layout_width="122dp"
            android:layout_height="130dp"
            android:layout_margin="10dp"
            android:onClick="playfrogforelephant"
            app:srcCompat="@drawable/frog"
            tools:layout_editor_absoluteX="194dp"
            tools:layout_editor_absoluteY="186dp" />
    </LinearLayout>

    <ImageView
        android:id="@+id/imageView15"
        android:layout_width="122dp"
        android:layout_height="130dp"
        android:layout_marginBottom="155dp"
        android:onClick="playsnailforelephant"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout11"
        app:srcCompat="@drawable/snail" />

    <ImageView
        android:id="@+id/imageListen6"
        android:layout_width="54dp"
        android:layout_height="48dp"
        android:background="@color/listen_button_color"
        android:onClick="listenAgain6"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView15"
        app:layout_constraintVertical_bias="0.283"
        app:srcCompat="@android:drawable/ic_lock_silent_mode_off" />

    <TextView
        android:id="@+id/textListen6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/listen"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageListen6" />

</androidx.constraintlayout.widget.ConstraintLayout>