<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/theme_party"
    tools:context=".EighthParty">
    <LinearLayout
        android:id="@+id/linearLayout15"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="29dp"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/textView8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textSkor8"
            android:textSize="24sp"
            android:textColor="@color/score_color"
            android:layout_marginStart="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="50dp"
            android:text="@string/score" />

        <TextView
            android:id="@+id/textHigh8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/high" />

        <TextView
            android:id="@+id/textKalan8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="5dp"
            android:text="@string/time" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="62dp"
        android:text="@string/horse"
        android:textColor="#000000"
        android:textSize="44sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout17"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearLayout15"/>

    <LinearLayout
        android:id="@+id/linearLayout16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="155dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout17">

        <ImageView
            android:id="@+id/imageView20"
            android:layout_width="122dp"
            android:layout_height="130dp"
            android:layout_margin="10dp"
            android:onClick="playsheepforhorse"
            app:srcCompat="@drawable/sheep"
            tools:layout_editor_absoluteX="73dp"
            tools:layout_editor_absoluteY="187dp" />

        <ImageView
            android:id="@+id/imageView21"
            android:layout_width="122dp"
            android:layout_height="130dp"
            android:layout_margin="10dp"
            android:onClick="playduckforhorse"
            app:srcCompat="@drawable/duck"
            tools:layout_editor_absoluteX="194dp"
            tools:layout_editor_absoluteY="186dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/linearLayout16"
        app:layout_constraintTop_toBottomOf="@id/textView8">

        <ImageView
            android:id="@+id/imageView22"
            android:layout_width="122dp"
            android:layout_height="130dp"
            android:layout_margin="10dp"
            android:onClick="playhorse2"
            app:srcCompat="@drawable/horse"
            tools:layout_editor_absoluteX="73dp"
            tools:layout_editor_absoluteY="187dp" />

        <ImageView
            android:id="@+id/imageView23"
            android:layout_width="122dp"
            android:layout_height="130dp"
            android:layout_margin="10dp"
            android:onClick="playbeeforhorse"
            app:srcCompat="@drawable/bee"
            tools:layout_editor_absoluteX="194dp"
            tools:layout_editor_absoluteY="186dp" />
    </LinearLayout>
    <ImageView
        android:id="@+id/imageListen8"
        android:layout_width="54dp"
        android:layout_height="48dp"
        android:background="@color/listen_button_color"
        android:onClick="listenAgain8"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearLayout16"
        app:layout_constraintVertical_bias="0.283"
        app:srcCompat="@android:drawable/ic_lock_silent_mode_off" />

    <TextView
        android:id="@+id/textListen8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/listen"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageListen8" />


</androidx.constraintlayout.widget.ConstraintLayout>